# VariousSmallpt

./: .gitignore  CMakeLists.txt  README.md
ismallpt/: CMakeLists.txt  ismallpt.cpp
ismallpte/: CMakeLists.txt  ismallpte.cpp
smallpt/: CMakeLists.txt  smallpt.cpp
