
set(PROJECT_NAME "ismallpte")

file(GLOB_RECURSE PROJECT_SOURCES *.c *.cpp)
file(GLOB_RECURSE PROJECT_HEADERS *.h)

find_package(OpenMP)
if(OPENMP_FOUND)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
else()
	message("OPENMO NOT FOUND")
endif()

source_group("HEADERS" FILES ${PROJECT_HEADERS})
source_group("SOURCES" FILES ${PROJECT_SOURCES})

add_executable(${PROJECT_NAME} ${PROJECT_HEADERS} ${PROJECT_SOURCES})

